[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_2f5qk"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_2f5qk")

[node name="Title" type="Label" parent="."]
offset_left = 0
offset_top = 40
offset_right = 1280
offset_bottom = 140
text = "Angry G√°borb√°"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 64

[node name="CannonSprite" type="Sprite2D" parent="."]
position = Vector2(640, 250)
scale = Vector2(0.5, 0.5)

[node name="Buttons" type="VBoxContainer" parent="."]
offset_left = 540
offset_top = 400
offset_right = 740
offset_bottom = 600
theme_override_constants/separation = 12

[node name="PlayButton" type="Button" parent="Buttons"]
text = "‚ñ∂ J√°t√©k ind√≠t√°sa"

[node name="SettingsButton" type="Button" parent="Buttons"]
text = "‚öô Be√°ll√≠t√°sok"

[node name="CreditsButton" type="Button" parent="Buttons"]
text = "üë§ K√©sz√≠t≈ëk"
